--- a/index.html
+++ b/index.html
@@ -513,16 +513,51 @@
 
         // КРИТИЧНО: Проверка и инициализация Telegram WebApp
         console.log('🚀 Инициализация WebApp...');
+        console.log('🌐 URL:', window.location.href);
+        console.log('📱 User Agent:', navigator.userAgent);
+
+        // Добавляем визуальную диагностику
+        function addDebugInfo(message, type = 'info') {
+            const debugDiv = document.createElement('div');
+            debugDiv.style.cssText = `
+                position: fixed; top: 10px; right: 10px; z-index: 9999;
+                background: ${type === 'error' ? '#ff4444' : type === 'success' ? '#44ff44' : '#4444ff'};
+                color: white; padding: 5px 10px; border-radius: 5px; font-size: 12px;
+                margin-bottom: 5px; max-width: 300px; word-wrap: break-word;
+            `;
+            debugDiv.textContent = message;
+            document.body.appendChild(debugDiv);
+
+            // Удаляем через 5 секунд
+            setTimeout(() => debugDiv.remove(), 5000);
+        }
 
         if (!window.Telegram || !window.Telegram.WebApp) {
             console.error("❌ Telegram WebApp API недоступен.");
+            addDebugInfo("❌ Telegram WebApp API недоступен", 'error');
         } else {
             console.log("✅ Telegram WebApp API доступен.");
+            addDebugInfo("✅ Telegram WebApp API доступен", 'success');
+
+            // Логируем информацию о WebApp
+            console.log("📊 WebApp версия:", window.Telegram.WebApp.version);
+            console.log("📱 Платформа:", window.Telegram.WebApp.platform);
+            console.log("🎨 Цветовая схема:", window.Telegram.WebApp.colorScheme);
+
+            // Проверяем initData
+            if (window.Telegram.WebApp.initData) {
+                console.log("🔐 initData доступен:", window.Telegram.WebApp.initData.length, "символов");
+                addDebugInfo("✅ initData доступен", 'success');
+            } else {
+                console.log("⚠️ initData недоступен");
+                addDebugInfo("⚠️ initData недоступен", 'error');
+            }
 
             // ОБЯЗАТЕЛЬНО: Инициализируем WebApp
             try {
                 window.Telegram.WebApp.ready();
                 console.log("✅ WebApp.ready() вызван");
+                addDebugInfo("✅ WebApp.ready() вызван", 'success');
 
                 // Настраиваем WebApp
                 window.Telegram.WebApp.expand();
@@ -534,15 +569,18 @@
                 window.Telegram.WebApp.MainButton.textColor = "#000000";
                 window.Telegram.WebApp.MainButton.show();
                 console.log("✅ MainButton настроен");
+                addDebugInfo("✅ MainButton настроен", 'success');
 
                 // Обработчик MainButton
                 window.Telegram.WebApp.MainButton.onClick(function() {
                     console.log("🔘 MainButton нажат");
+                    addDebugInfo("🔘 MainButton нажат", 'info');
                     submitForm();
                 });
 
             } catch (error) {
                 console.error("❌ Ошибка инициализации WebApp:", error);
+                addDebugInfo("❌ Ошибка инициализации: " + error.message, 'error');
             }
 
             // Установка цветов темы
@@ -617,6 +655,7 @@
         // Функция отправки формы
         function submitForm() {
             console.log('📤 Отправка формы...');
+            addDebugInfo("📤 Начинаем отправку формы", 'info');
 
             // Показываем спиннер загрузки
             loadingSpinner.style.display = 'block';
@@ -627,10 +666,18 @@
                     throw new Error("Telegram WebApp API недоступен.");
                 }
 
+                console.log("✅ Telegram WebApp API доступен для отправки");
+                addDebugInfo("✅ WebApp API готов", 'success');
+
                 // Получаем данные из формы
                 const nicknameValue = nickname.value.trim();
                 const discordValue = discord.value.trim();
                 const reasonValue = reason.value.trim();
+
+                console.log("📋 Сырые данные формы:");
+                console.log("  Никнейм:", nicknameValue);
+                console.log("  Discord:", discordValue);
+                console.log("  Причина:", reasonValue);
 
                 // Валидация данных
                 if (!nicknameValue.match(/^[a-zA-Z0-9_]{3,16}$/)) {
@@ -646,28 +693,54 @@
                 const data = {
                     nickname: sanitizedNickname,
                     discord: sanitizedDiscord,
-                    reason: sanitizedReason
+                    reason: sanitizedReason,
+                    timestamp: new Date().toISOString(),
+                    debug: true
                 };
 
-                console.log("📦 Данные для отправки:", data);
+                console.log("📦 Финальные данные для отправки:", data);
+                const jsonData = JSON.stringify(data);
+                console.log("📏 JSON размер:", jsonData.length, "символов");
+                console.log("📄 JSON строка:", jsonData);
 
-                // Добавляем эффект задержки для лучшего UX
-                setTimeout(() => {
-                    // КРИТИЧНО: Отправляем данные в Telegram WebApp
-                    window.Telegram.WebApp.sendData(JSON.stringify(data));
-                    console.log("✅ Данные отправлены через Telegram WebApp");
+                addDebugInfo("📦 Данные подготовлены: " + jsonData.length + " символов", 'info');
 
-                    // Скрываем MainButton
+                // Проверяем функцию sendData
+                if (typeof window.Telegram.WebApp.sendData !== 'function') {
+                    throw new Error("sendData не является функцией");
+                }
+
+                console.log("🚀 Вызываем sendData...");
+                addDebugInfo("🚀 Отправляем данные...", 'info');
+
+                // КРИТИЧНО: Отправляем данные БЕЗ задержки
+                try {
+                    window.Telegram.WebApp.sendData(jsonData);
+                    console.log("✅ sendData() вызван успешно!");
+                    addDebugInfo("✅ sendData() вызван!", 'success');
+                } catch (sendError) {
+                    console.error("❌ Ошибка в sendData:", sendError);
+                    addDebugInfo("❌ Ошибка sendData: " + sendError.message, 'error');
+                    throw sendError;
+                }
+
+                // Скрываем MainButton
+                if (window.Telegram.WebApp.MainButton) {
                     window.Telegram.WebApp.MainButton.hide();
+                    console.log("✅ MainButton скрыт");
+                }
 
-                    // Закрываем Web App
-                    setTimeout(() => {
-                        window.Telegram.WebApp.close();
-                    }, 500);
-                }, 1000);
+                // Закрываем Web App через 2 секунды
+                setTimeout(() => {
+                    console.log("🚪 Закрываем WebApp...");
+                    addDebugInfo("🚪 Закрываем WebApp", 'info');
+                    window.Telegram.WebApp.close();
+                }, 2000);
 
             } catch (error) {
                 console.error("❌ Ошибка:", error.message);
+                console.error("❌ Stack trace:", error.stack);
+                addDebugInfo("❌ Ошибка: " + error.message, 'error');
                 alert(`Ошибка: ${error.message}`);
                 loadingSpinner.style.display = 'none';
             }
