--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             margin: 0;
             overflow-x: hidden;
             font-family: 'Press Start 2P', cursive;
-            background: linear-gradient(135deg, #1a1a2e, #16213e, #0f3460);
-            background-size: cover;
+            background: url('https://i.imgur.com/grass_bg.jpg') no-repeat center center fixed,
+                        linear-gradient(135deg, #1a4a1a, #2d5a2d, #0f3f0f);
+            background-size: cover, cover;
+            background-blend-mode: overlay;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -383,7 +385,9 @@
     <div class="form-container">
         <!-- Иконка сервера -->
         <div class="logo">
-            <div style="width: 80px; height: 80px; background: var(--primary-color); border-radius: 10px; display: flex; align-items: center; justify-content: center; font-size: 24px; color: #000; font-weight: bold;">PL</div>
+            <img src="https://i.imgur.com/playland_logo.png" alt="PLAYLAND" width="80" height="80"
+                 onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+            <div style="width: 80px; height: 80px; background: var(--primary-color); border-radius: 10px; display: none; align-items: center; justify-content: center; font-size: 24px; color: #000; font-weight: bold;">PL</div>
         </div>
 
         <h2>PLAYLAND</h2>
@@ -588,27 +592,49 @@
         // Функция отправки через API (fallback)
         async function sendDataViaAPI(data) {
             try {
-                const response = await fetch('/api/applications', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(data)
-                });
+                // Пробуем разные endpoints
+                const endpoints = [
+                    'http://127.0.0.1:5000/api/applications',
+                    'http://localhost:5000/api/applications',
+                    '/api/applications'
+                ];
 
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
+                let lastError = null;
+
+                for (const endpoint of endpoints) {
+                    try {
+                        console.log(`🔄 Пробуем отправить на: ${endpoint}`);
+
+                        const response = await fetch(endpoint, {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                                'Accept': 'application/json'
+                            },
+                            body: JSON.stringify(data)
+                        });
+
+                        if (response.ok) {
+                            const result = await response.json();
+                            console.log("✅ Данные отправлены через API:", result);
+                            addDebugInfo("✅ Заявка отправлена через веб-API!", 'success');
+
+                            // Показываем сообщение об успехе
+                            alert("🎉 Заявка успешно отправлена!\\n\\nМы рассмотрим её в ближайшее время.");
+
+                            // Очищаем форму
+                            form.reset();
+                            return;
+                        } else {
+                            lastError = new Error(`HTTP ${response.status}: ${response.statusText}`);
+                        }
+                    } catch (error) {
+                        lastError = error;
+                        console.log(`❌ Ошибка для ${endpoint}:`, error.message);
+                    }
                 }
 
-                const result = await response.json();
-                console.log("✅ Данные отправлены через API:", result);
-                addDebugInfo("✅ Заявка отправлена через веб-API!", 'success');
-
-                // Показываем сообщение об успехе
-                alert("🎉 Заявка успешно отправлена!\\n\\nМы рассмотрим её в ближайшее время.");
-
-                // Очищаем форму
-                form.reset();
+                throw lastError || new Error('Все endpoints недоступны');
 
             } catch (error) {
                 console.error("❌ Ошибка API:", error);
