--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
             margin: 0;
             overflow-x: hidden;
             font-family: 'Press Start 2P', cursive;
-            background: 
+            background:
                 radial-gradient(circle at 20% 80%, rgba(0, 255, 0, 0.15) 0%, transparent 50%),
                 radial-gradient(circle at 80% 20%, rgba(255, 204, 0, 0.15) 0%, transparent 50%),
-                linear-gradient(135deg, #0a1a0a, #1a2a1a, #0f1f0f);
+                linear-gradient(135deg, rgba(10, 26, 10, 0.9), rgba(26, 42, 26, 0.9), rgba(15, 31, 15, 0.9)),
+                url('./images/grass_background.jpg');
             background-size: 100% 100%;
             background-attachment: fixed;
             display: flex;
@@ -367,7 +368,10 @@
     <div class="form-container">
         <!-- Иконка сервера -->
         <div class="logo">
-            <div style="width: 80px; height: 80px; background: linear-gradient(135deg, var(--primary-color), var(--accent-color)); border-radius: 15px; display: flex; align-items: center; justify-content: center; font-size: 20px; color: #000; font-weight: bold; border: 3px solid #000; box-shadow: var(--pixel-shadow); animation: float 3s ease-in-out infinite;">
+            <img src="./images/playland_logo.png.png" alt="PlayLand Logo"
+                 style="width: 80px; height: 80px; border-radius: 15px; border: 3px solid #000; box-shadow: var(--pixel-shadow); animation: float 3s ease-in-out infinite;"
+                 onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+            <div style="width: 80px; height: 80px; background: linear-gradient(135deg, var(--primary-color), var(--accent-color)); border-radius: 15px; display: none; align-items: center; justify-content: center; font-size: 20px; color: #000; font-weight: bold; border: 3px solid #000; box-shadow: var(--pixel-shadow); animation: float 3s ease-in-out infinite;">
                 🏰 PL
             </div>
         </div>
